HUDF-1793: Move arrows 1px so border is aligned with rest of search box, however pls see comment on ticket as this is only an issue on the build and not locally @razlymiles

--- a/FJSHUD/app/styles/firefox.less
+++ b/FJSHUD/app/styles/firefox.less
@@ -88,7 +88,8 @@
         }
      }
     .Widget.Queues{
-        .ToolBar.chatTop .ChatSearch .Arrows{top: -27px;}
+        // .ToolBar.chatTop .ChatSearch .Arrows{top: -27px;}
+        .ToolBar.chatTop .ChatSearch .Arrows{top: -26px !important;}
         .Block{
             .Avatar {
                 width: 42px !important;
@@ -311,7 +312,7 @@
                 width: 24%;
                 position: relative;
                 clear: none;
-                top: -26px;
+                top: -26px !important;
              }
 
             input[type=search].SearchBox{
